--- a/application/admin/view/common/head.html
+++ b/application/admin/view/common/head.html
@@ -9,10 +9,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
-    <!-- Bootstrap 5 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
+    <!-- Bootstrap 5 本地 CSS -->
+    <link rel="stylesheet" href="/static/plugins/bootstrap/css/bootstrap.min.css">
+    <!-- Bootstrap Icons 本地 -->
+    <link rel="stylesheet" href="/static/plugins/bootstrap/icons/bootstrap-icons.css">
     <!-- LayUI CSS (仅用于布局系统) -->
     <link rel="stylesheet" href="/static/plugins/layui/css/layui.css" media="all" />
     <!-- 全局样式 -->
