--- a/application/admin/view/products/index.html
+++ b/application/admin/view/products/index.html
@@ -108,8 +108,10 @@
         <table class="layui-table" id="table-list" lay-filter="table-list"></table>
     </div>
     <script type="text/html" id="action">
-        {if session('aid') eq 1}
+        {if condition="session('aid') eq 1 OR session('gid') eq 13"}
         <a class="layui-btn layui-btn-xs" lay-event="edit"><i class="layui-icon">&#xe642;</i>编辑</a>
+        {/if}
+        {if session('aid') eq 1}
         <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del"><i class="layui-icon">&#xe640;</i>删除</a>
         {/if}
     </script>
